--- a/mkat1/WebContent/index.html
+++ b/mkat1/WebContent/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/custom.css" rel="stylesheet">
 	
 	<title>MKAT</title>
@@ -15,9 +15,11 @@
 
 <body>
 
+	<!-- 
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
 		
+		 
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
@@ -25,34 +27,113 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">MKAT</a>
+      <a class="navbar-brand" href="#">Mark Kirchseeoner<br/>Auto-Teiler e.V.</a>
     </div>
-		    
-    <!-- Collect the nav links, forms, and other content for toggling -->
+	
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#first">First <span class="sr-only">(current)</span></a></li>
-        <li><a href="#second">Second</a></li>      
-        <li><a href="#third">Third</a></li>
+        <li><a href="#second">Fahrzeuge</a></li>      
+        <li><a href="#third">Standorte</a></li>
+        <li><a href="#forth">Kosten</a></li>
+        <li><a href="#third">Auto Buchen</a></li>
+        <li><a href="#third">FAQ</a></li>
+        <li><a href="#third">Mitglied werden</a></li>
+        <li><a href="#third">Login</a></li>
       </ul>     
-    </div><!-- /.navbar-collapse -->
+    </div> <! - - /.navbar-collapse - ->
 		
 		</div>
 	</nav>
-
-	<h1>Foo Bar</h1>
+	-->
 	
-	<h2><a id="first">First</a></h2>
+	<nav class="mkat-nav" role="navigation">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-xs-0 col-md-1 col-lg-2"></div>
+				<div class="col-xs-12 col-md-4 col-lg-3 mkat-brand">
+				<!-- 
+				<img src="images/icon.png" style="float: left; padding-right: 1em;"/>
+				Markt Kirchseeoner<br/>Auto-Teiler e.V.
+				 -->
+				 <img src="images/logo.png" class="img-responsive" />
+				</div>
+				<div class="col-xs-12 col-md-7 col-lg-7 mkat-menu">
+					<ul>
+						<li class="active"><a href="#first">First</a></li>
+				        <li><a href="#second">Fahrzeuge</a></li>      
+				        <li><a href="#third">Standorte</a></li>
+				        <li><a href="#forth">Kosten</a></li>
+				        <li><a href="#third">Auto Buchen</a></li>
+				        <li><a href="#third">FAQ</a></li>
+				        <li><a href="#third">Mitglied werden</a></li>
+				        <li><a href="#third">Login</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</nav>
+
+	
+	<div class="container-fluid">
+	
+	<div class="col-xs-0 col-md-1 col-lg-2"></div>
+	
+	<div class="col-xs-12 col-md-10 col-lg-8">
+	
+	<header>
+		<p>Besitzt du noch</p><p>oder TEILst du schon?</p>
+	</header>
+	
+
+	<h2 id="first" class="topic">First</h2>
+	<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
+	</p>
 	<p>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
 	</p>
 	
-	<h2><a name="second">Second</a></h2>
-	<h2><a name="third">Third</a></h2>
+	<h2 id="second" class="topic">Second</h2>
+	<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
+	</p>
+	<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
+	</p>
+	
+	<h2 id="third" class="topic">Third</h2>
+	<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
+	</p>
+	<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
+	</p>
+	
+	<h2 id="forth" class="topic">Forth</h2>
+	<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
+	</p>
+	<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
+	</p>
+	
+	</div><!-- inner -->
+	
+	</div><!-- global -->
 	
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/custom.js"></script>
+	<script src="js/waypoints.js"></script>
+	
+	<script>
+	$('.topic').waypoint(function() {
+		console.log ("Hit: " + this.id );
+		$('.mkat-menu li').removeClass("active");
+		$('.mkat-menu a[href=#'+this.id+']').parents().addClass("active");
+	});
+	</script>
 </body>
 
 </html>
