add first image

--- a/mkat1/WebContent/index.html
+++ b/mkat1/WebContent/index.html
@@ -46,7 +46,7 @@
 				        <li><a class="menu-entry" href="#fifth">Auto Buchen</a></li>
 				        <li><a class="menu-entry" href="#sixth">FAQ</a></li>
 				        <li><a class="menu-entry" href="#seventh">Mitglied werden</a></li>
-				        <li><a class="menu-entry" href="#eighth">Login</a></li>
+				        <li><a target="_blank" href="https://buchung.elkato.de/mkat">Login</a></li>
 					</ul>
 				</div>
 			</div>
@@ -55,6 +55,14 @@
 	
 	
 	<div id="main" class="container-fluid">
+	
+	<div class="row">
+		<div class="col-xs-12 imagebox">
+			 <img src="images/MKAT_web_head_street_1280x365_150101.jpg" class="img-responsive"/>
+		</div>
+	</div>
+	
+	<div class="row">
 	
 	<div class="col-xs-0 col-md-1 col-lg-2"></div>
 	
@@ -98,6 +106,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie r
 	</p>
 	
 	</div><!-- inner -->
+	
+	</div><!-- row -->
 	
 	</div><!-- global -->
 	
