add faq, downloads and a few other things

--- a/mkat1/WebContent/index.html
+++ b/mkat1/WebContent/index.html
@@ -39,14 +39,11 @@
 				</div>
 				<div class="col-xs-12 col-md-7 col-lg-7 mkat-menu">
 					<ul>
-						<li id="first" class="active"><a class="menu-entry" href="">First</a></li>
-				        <li><a class="menu-entry" href="#second">Fahrzeuge</a></li>      
-				        <li><a class="menu-entry" href="#third">Standorte</a></li>
-				        <li><a class="menu-entry" href="#forth">Kosten</a></li>
-				        <li><a class="menu-entry" href="#fifth">Auto Buchen</a></li>
-				        <li><a class="menu-entry" href="#sixth">FAQ</a></li>
-				        <li><a class="menu-entry" href="#seventh">Mitglied werden</a></li>
-				        <li><a target="_blank" href="https://buchung.elkato.de/mkat">Login</a></li>
+						<li id="wie" class="active"><a class="menu-entry" href="">Wie funktioniert es?</a></li>
+				        <li><a class="menu-entry" href="#member">Mitglied werden</a></li>
+				        <li><a target="_blank" href="https://buchung.elkato.de/mkat">Zur Buchung</a></li>
+				        <li><a class="menu-entry" href="#downloads">Downloads</a></li>
+				        <li><a class="menu-entry" href="faq.html">FAQ</a></li>
 					</ul>
 				</div>
 			</div>
@@ -67,44 +64,61 @@
 	<div class="col-xs-0 col-md-1 col-lg-2"></div>
 	
 	<div class="col-xs-12 col-md-10 col-lg-8">
-	
-	<header>
-		<p>Besitzt du noch</p><p>oder TEILst du schon?</p>
-	</header>
-	
 
-	<h2 id="first" class="topic">First</h2>
+	<div id="wie" class="topic"></div>
+
+
+	<h2>Wie funktioniert es?</h2>
 	<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
+Wie funktioniert es - Text.......
 	</p>
 	<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
-	</p>
+mehr text zu WIE	</p>
+
+
+	<div id="member" class="topic"></div>
 	
-	<h2 id="second" class="topic">Second</h2>
+	<h2>Mitglied werden</h2>
+	<div style="float: right;"><a href="downloads/Beitrittserklaerung_MKAT_141103.pdf" target="_blank"><img src="images/ICON_beitritt_MKAT_140107.png" width="200" height="200"/></a></div>
+
 	<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
-	</p>
-	<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
-	</p>
+	Sie besitzen kein eigenes Auto, wollen aber dennoch mobil sein? Dann ist Autoteilen genau richtig für Sie!</p>
+	<p>Vorteile einer Mitgliedschaft im Markt Kirchseeoner Auto-Teiler e.V. sind:</p>
+	<ul><li>keine laufenden Kosten</li>
+	<li>sicherer und einfacher Zugriff auf die MKAT-Fahrzeuge von zu Hause aus</li>
+	<li>gemeinschaftliche Nutzung von MVV-Zeitkarten</li>
+	<li>weitere Fahrzeuge bei benachbarten Vereinen</li></ul>
+	<p>Sind sie neugierig geworden? Dann rufen sie uns an.<br>
+	Beate Kiss (Telefon: 08091 7208)<br>
+	Rudolf Milde (Telefon: 08091 3137)</p>
 	
-	<h2 id="third" class="topic">Third</h2>
-	<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
-	</p>
-	<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
-	</p>
+	<div  id="downloads" class="topic"></div>
 	
-	<h2 id="forth" class="topic">Forth</h2>
+	<h2>Downloads</h2>
 	<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
-	</p>
-	<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie rhoncus odio, quis congue lectus dignissim eget. Fusce lacinia ullamcorper consectetur. Etiam eget lorem rutrum, porta velit vel, sagittis quam. Mauris placerat risus condimentum massa gravida, eu elementum lacus mattis. Vivamus nec ante condimentum neque lacinia pharetra eget nec lacus. Nunc mollis laoreet ex a dictum. Curabitur eget pulvinar est, ultricies tempor quam. Fusce ut sapien pharetra, ultricies lacus a, accumsan sem. Donec eget magna et sapien posuere tempus. Integer sem diam, iaculis non finibus a, dapibus sit amet ipsum. Proin lacinia vitae lorem id condimentum. Sed sit amet nisi vitae nunc tincidunt sollicitudin.
-	</p>
 	
+<!-- 
+Satzung
+Nutzungsordnung
+Preisliste  
+Regeln für die Nutzung von MVV-Zeitkartenkommt noch -->
+
+	<p>
+	Eine Quernutzung ist mit den folgenden Vereinen möglich:
+	<ul><li>Vaterstettener Autoteiler e.V. - VAT (Preisliste, Nutzungsvereinbarung)</li> 
+	<li>Zornedinger Autoteiler e.V. - ZAT (Preisliste, Nutzungsvereinbarung)</li>
+	<li>Grafinger Autoteiler e.V. - GAT (Preisliste, Nutzungsvereinbarung)</li>
+	</ul>
+
+	<div id="faq" class="topic" ></div>
+                                         
+	<h2>FAQ</h2>
+	<p>
+Hier brauchen wir noch Fragen und die dazu gehörigen Antworten. Am liebsten in Satzform.	</p>
+
+<div style="height: 1000px;"></div>
+
+
 	</div><!-- inner -->
 	
 	</div><!-- row -->
