--- a/mkat1/WebContent/index.html
+++ b/mkat1/WebContent/index.html
@@ -39,7 +39,7 @@
 				</div>
 				<div class="col-xs-12 col-md-7 col-lg-7 mkat-menu">
 					<ul>
-						<li id="wie" class="active"><a class="menu-entry" href="">Wie funktioniert es?</a></li>
+						<li id="wie" class="active"><a class="menu-entry" href="#wir">Wer sind wir?</a></li>
 				        <li><a class="menu-entry" href="#member">Mitglied werden</a></li>
 				        <li><a target="_blank" href="https://buchung.elkato.de/mkat">Zur Buchung</a></li>
 				        <li><a class="menu-entry" href="#downloads">Downloads</a></li>
@@ -65,15 +65,14 @@
 	
 	<div class="col-xs-12 col-md-10 col-lg-8">
 
-	<div id="wie" class="topic"></div>
+	<div id="wer" class="topic"></div>
 
 
-	<h2>Wie funktioniert es?</h2>
+	<h2>Wer sind wir?</h2>
 	<p>
-Wie funktioniert es - Text.......
+Wir sind der neue Verein, der Markt Kirchseeon mobile macht. Wir wollen postiv zum Umweltschutz beitragen. Unser Verein Markt Kirchseeoner Auto-Teiler e.V. wurde im Juli 2014 gegründet. Schon ein halbes Jahr später haben wir jetzt zwei Autos und durch die Quernutzung mit anderen Auto-Teiler-Vereinen eine riesige Fahrzegflotte verfügbar.
+ Werden Sie Mitglied, statt sich selbst ein Auto anzuschaffen, welches dann die meiste Zeit ungenutzt herumsteht. Das spart Ihnen enorm Kosten, Sie brauchen sich nicht um die Wartung, Versicherung oder Steuer für das Auto kümmern. Buchen, Einsteigen und Losfahren.
 	</p>
-	<p>
-mehr text zu WIE	</p>
 
 
 	<div id="member" class="topic"></div>
