--- a/mkat1/WebContent/index.html
+++ b/mkat1/WebContent/index.html
@@ -39,7 +39,7 @@
 				</div>
 				<div class="col-xs-12 col-md-7 col-lg-7 mkat-menu">
 					<ul>
-						<li id="wie" class="active"><a class="menu-entry" href="#wir">Wer sind wir?</a></li>
+						<li id="wer" class="active"><a class="menu-entry" href="#wir">Wer sind wir?</a></li>
 				        <li><a class="menu-entry" href="#member">Mitglied werden</a></li>
 				        <li><a target="_blank" href="https://buchung.elkato.de/mkat">Zur Buchung</a></li>
 				        <li><a class="menu-entry" href="#downloads">Downloads</a></li>
