fertig zum Hochladen

--- a/mkat1/WebContent/index.html
+++ b/mkat1/WebContent/index.html
@@ -39,11 +39,12 @@
 				</div>
 				<div class="col-xs-12 col-md-7 col-lg-7 mkat-menu">
 					<ul>
-						<li id="wer" class="active"><a class="menu-entry" href="#wir">Wer sind wir?</a></li>
+						<li id="wer" class="active"><a class="menu-entry" href="">Wer sind wir?</a></li>
 				        <li><a class="menu-entry" href="#member">Mitglied werden</a></li>
 				        <li><a target="_blank" href="https://buchung.elkato.de/mkat">Zur Buchung</a></li>
 				        <li><a class="menu-entry" href="#downloads">Downloads</a></li>
 				        <li><a class="menu-entry" href="faq.html">FAQ</a></li>
+				        <li><a class="menu-entry" href="#impress">Impressum</a></li>				        
 					</ul>
 				</div>
 			</div>
@@ -95,25 +96,47 @@ Wir sind der neue Verein, der Markt Kirchseeon mobile macht. Wir wollen postiv z
 	
 	<h2>Downloads</h2>
 	<p>
-	
-<!-- 
-Satzung
-Nutzungsordnung
-Preisliste  
-Regeln für die Nutzung von MVV-Zeitkartenkommt noch -->
+	<ul>
+	 <li><a href="downloads/satzung.pdf" target="_blank">Unsere Satzung</a></li>
+	 <li><a href="downloads/nutzungsordnung.pdf" target="_blank">Unsere Nutzungsordnung</a></li>	
+	 <li><a href="downloads/preisliste.pdf" target="_blank">Unsere Preisliste</a></li>	
+	 <li><a href="downloads/mvv.pdf" target="_blank">Regeln für die Nutzung von MVV-Zeitkarten</a></li>	 
+	</ul>
 
 	<p>
 	Eine Quernutzung ist mit den folgenden Vereinen möglich:
-	<ul><li>Vaterstettener Autoteiler e.V. - VAT (Preisliste, Nutzungsvereinbarung)</li> 
-	<li>Zornedinger Autoteiler e.V. - ZAT (Preisliste, Nutzungsvereinbarung)</li>
-	<li>Grafinger Autoteiler e.V. - GAT (Preisliste, Nutzungsvereinbarung)</li>
+	<ul><li><a href="http://www.carsharing-vaterstetten.de/" target="_blank">Vaterstettener Autoteiler e.V. - VAT</a> (<a href="http://www.carsharing-vaterstetten.de/VAT/Preise" target="_blank">Preisliste</a>, <a href="http://www.carsharing-vaterstetten.de/uploads/VAT/nutzungsordnung.pdf" target="_blank">Nutzungsvereinbarung</a>)</li> 
+	<li><a href="http://www.carsharing-zorneding.de" target="_blank">Zornedinger Autoteiler e.V. - ZAT</a> (<a href="http://www.carsharing-zorneding.de/Docs/Tarif.pdf" target="_blank">Preisliste</a>, <a href="http://www.carsharing-zorneding.de/Docs/ZAT-Nutzungsordnung.pdf" target="_blank">Nutzungsvereinbarung</a>)</li>
+	<li><a href="http://www.grafingerautoteiler.de" target="_blank">Grafinger Autoteiler e.V. - GAT</a> (<a href="http://www.grafingerautoteiler.de/der_verein/carsharing/preise.html" target="_blank">Preisliste</a>, <a href="http://www.grafingerautoteiler.de/uploads/doc/Nutzungsordnung_09-08-2014.pdf" target="_blank">Nutzungsvereinbarung</a>)</li>
 	</ul>
 
-	<div id="faq" class="topic" ></div>
-                                         
-	<h2>FAQ</h2>
+		<div  id="impress" class="topic"></div>
+	<h2>Impressum</h2>
 	<p>
-Hier brauchen wir noch Fragen und die dazu gehörigen Antworten. Am liebsten in Satzform.	</p>
+Markt Kirchseeoner Auto-Teiler e.V. (MKAT)<br>
+Talweg 11, 85614 Kirchseeon<br>
+Telefon: +49 80 91/5 56 96 56<br>
+http://www.mk-autoteiler.de<br>
+E-Mail: info@mk-autoteiler.de</p>
+<p>
+Der Verein ist registriert unter der Nummer VR205571 beim Amtsgericht München.<br>
+USt-IdNr. (UID): DEXXXXXXXXXXXX<br>
+Vorstand:	<a href="mailto:rmilde@mk-autoteiler.de">Rudolf Milde</a> (Telefon: +49 80 91/3137)<br>
+Vorstand:	<a href="mailto:rmeiler@mk-autoteiler.de">Reinhold Meiler</a><br>
+Vorstand:	<a href="mailto:sbauer@mk-autoteiler.de">Stefan Bauer</a><br>
+Webmaster:	<a href="mailto:eeeveee@mk-autoteiler.de">ivonne Reimann</a> (Telefon: +49 80 91/39 800 69)</p>
+	 <p>
+Kontoverbindung:<br>	 
+Kontonummer:	27 8181 45<br>
+Bank:	Kreissparkasse München Starnberg Ebersberg<br>
+BLZ:	702 501 50<br>
+IBAN:	DE62 7025 0150 0027 8181 45 <br>
+BIC:	BYLADEM1KMS<br>
+</p>
+
+Der MKAT ist Mitglied im Bundesverband CarSharing e.V. 
+
+
 
 <div style="height: 1000px;"></div>
 
