--- a/mkat1/WebContent/faq.html
+++ b/mkat1/WebContent/faq.html
@@ -32,7 +32,7 @@
 <div class="col-xs-12 col-md-7 col-lg-7 mkat-menu">
 <ul>
 <li id="faq">
-<a class="menu-entry" href="index.html">Wie funktioniert es?</a>
+<a class="menu-entry" href="index.html">Wer sind wir?</a>
 </li>
 <li>
 <a class="menu-entry" href="index.html#member">Mitglied werden</a>
@@ -45,6 +45,9 @@
 </li>
 <li class="active">
 <a class="menu-entry" href="">FAQ</a>
+</li>
+<li>
+<a class="menu-entry" href="index.html#impress">Impressum</a>
 </li>
 </ul>
 </div>
@@ -242,7 +245,7 @@
 			
 			
 <li>
-<a href="#N65798">D&uuml;rfen Bekannte und Freunde ein VAT-Auto auch fahren?</a>
+<a href="#N65798">D&uuml;rfen Bekannte und Freunde ein MKAT-Auto auch fahren?</a>
 </li>
 			
 			
@@ -257,7 +260,7 @@
 			
 			
 <li>
-<a href="#N65819">Kann ich mit einem VAT-Auto auch in den Urlaub fahren?</a>
+<a href="#N65819">Kann ich mit einem MKAT-Auto auch in den Urlaub fahren?</a>
 </li>
 	
 	
@@ -593,10 +596,10 @@
 			
 			
 <div id="N65798" class="faq-entry">
-<h2>D&uuml;rfen Bekannte und Freunde ein VAT-Auto auch fahren?</h2>
+<h2>D&uuml;rfen Bekannte und Freunde ein MKAT-Auto auch fahren?</h2>
 <div class="faq-details">
 <p>
-				Die VAT-Mitgliedschaft gilt f&uuml;r alle Mitglieder eines Haushaltes. Wenn es sinnvoll oder n&ouml;tig ist, d&uuml;rfen auch Dritte mit einem VAT-Fahrzeug fahren. Das Mitglied muss sich aber davon &uuml;berzeugen, dass der/die Dritte eine g&uuml;ltige Fahrerlaubnis f&uuml;r das Fahrzeug besitzt. In jedem Fall tr&auml;gt das Mitglied die Nutzungsgeb&uuml;hren und haftet uneingeschr&auml;nkt f&uuml;r Sch&auml;den und Verst&ouml;&szlig;e gegen die Nutzungsordnung (PDF).
+				Die MKAT-Mitgliedschaft gilt f&uuml;r alle Mitglieder eines Haushaltes. Wenn es sinnvoll oder n&ouml;tig ist, d&uuml;rfen auch Dritte mit einem MKAT-Fahrzeug fahren. Das Mitglied muss sich aber davon &uuml;berzeugen, dass der/die Dritte eine g&uuml;ltige Fahrerlaubnis f&uuml;r das Fahrzeug besitzt. In jedem Fall tr&auml;gt das Mitglied die Nutzungsgeb&uuml;hren und haftet uneingeschr&auml;nkt f&uuml;r Sch&auml;den und Verst&ouml;&szlig;e gegen die Nutzungsordnung (PDF).
 				</p>
 </div>
 <a href="#top">Zur&uuml;ck</a>
@@ -622,7 +625,7 @@
 			
 			
 <div id="N65819" class="faq-entry">
-<h2>Kann ich mit einem VAT-Auto auch in den Urlaub fahren?</h2>
+<h2>Kann ich mit einem MKAT-Auto auch in den Urlaub fahren?</h2>
 <div class="faq-details">
 <p>Ja, es ist m&ouml;glich, ein Auto auch f&uuml;r einen Urlaub zu buchen. F&uuml;r eine Strecke von &uuml;ber 300 km (bis 1000 km) gibt es einen verg&uuml;nstigten Tarif pro Kilometer. Bei Kleinwagen sind das 0,05 &euro; weniger, bei allen anderen 0,10 &euro; weniger pro Kilometer.</p>
 <p>In der Regel sollte eine tagelange Buchung aber vermieden werden, um allen Mitgliedern die M&ouml;glichkeit zu geben, ein Auto zu benutzen, wenn sie es brauchen.</p>
