defekte Links ausgeböendet Text ergänzt

--- a/mkat1/WebContent/index.html
+++ b/mkat1/WebContent/index.html
@@ -74,7 +74,44 @@
 Wir sind der neue Verein, der Markt Kirchseeon mobile macht. Wir wollen postiv zum Umweltschutz beitragen. Unser Verein Markt Kirchseeoner Auto-Teiler e.V. wurde im Juli 2014 gegründet. Schon ein halbes Jahr später haben wir jetzt zwei Autos und durch die Quernutzung mit anderen Auto-Teiler-Vereinen eine riesige Fahrzegflotte verfügbar.
  Werden Sie Mitglied, statt sich selbst ein Auto anzuschaffen, welches dann die meiste Zeit ungenutzt herumsteht. Das spart Ihnen enorm Kosten, Sie brauchen sich nicht um die Wartung, Versicherung oder Steuer für das Auto kümmern. Buchen, Einsteigen und Losfahren.
 	</p>
+	<h2>Warum Autoteilen?</h2>
+	<p>
+ Autoteiler finden sich als Arbeitsgemeinschaft an ein gemeinsamen Projekt zusammen und kommen so mit neuen Leuten aus der Gemeinde zusammen.
+</p><p>
+Autoteiler sparen Geld, da sie selber kein Auto und keinen Stellplatz mehr finanzieren und unterhalten müssen.
+</p><p>
+Autoteilen ist wirtschaftlich, da es keinen Jahres oder Monatsbeitrag kostet. Es fallen nur bei der tatsächlichen Autobenutzung Kosten an. Wir arbeiten nicht gewinnorientiert und halten die Nutzungskosten damit niedrig. 
+</p><p>
+Autoteilen soll anregen öfters mal zu Fuß zu gehen, mit dem Rad zu fahren, Fahrgemeinschaften zu bilden oder öffentliche Verkehrsmittel zu benutzen.
+</p><p>
+Autoteilen ist umweltfreundlich, da durch die gemeinsame Nutzung weniger Autos und Parkplatze gebraucht werden und damit unsere Ressourcen geschont werden.
+</p><p>
+Autoteilen ist umweltbewusst, da man bewusster seine Autofahrten plant.
+</p><p>
+Autoteiler schonen die eigenen Kräfte, da man sich nicht um die notwendigen Reparaturarbeiten und die Servicetermine für sein Auto kümmern müssen.
+</p><p>
+Autoteilen kann den Zweitwagen im Haushalt sinnvoll ersetzen.
+</p><p>
+Autoteiler können über die befreundeten Vereine der Nachbarorte im Landkreis Autos wie z.B. Transporter, 9-Sitzer-Busse oder Anhänger buchen.
+</p><p>
+Autoteiler müssen aber auch vorausplanend denken, da nur bei rechtzeitiger Buchung auch die Wahrscheinlichkeit hoch ist, dass das Auto in dieser Zeit verfügbar ist. 
+</p><p>
+Autoteiler haben eventuell einen Weg zum Stellplatz des Autoteiler-Autos zurückzulegen.
+</p><p>
+Autoteiler verzichten auf die jederzeit und immer vorhandene Verfügbarkeit des Autos.
+</p>
 
+
+Wie schaut ihre persönliche Bewertung der Vor- und Nachteile unter dem Strich aus?
+
+Sind die Mittel und Zeit, welche man für das eigene Auto aufbringen muss, nicht besser in Wohneigentum oder anderen Dingen investiert?
+
+Autoteilen geht in Alltag mit Sicherheit leichter, als man es sich zuerst vorstellt !
+	
+	
+	
+	
+	
 
 	<div id="member" class="topic"></div>
 	
@@ -97,10 +134,11 @@ Wir sind der neue Verein, der Markt Kirchseeon mobile macht. Wir wollen postiv z
 	<h2>Downloads</h2>
 	<p>
 	<ul>
-	 <li><a href="downloads/satzung.pdf" target="_blank">Unsere Satzung</a></li>
+	<li><a href="downloads/Beitrittserklaerung_MKAT_141103.pdf" target="_blank">Beitrittserklärung MKAT</a></li>
+	 <!-- <li><a href="downloads/satzung.pdf" target="_blank">Unsere Satzung</a></li> -->
 	 <li><a href="downloads/nutzungsordnung.pdf" target="_blank">Unsere Nutzungsordnung</a></li>	
-	 <li><a href="downloads/preisliste.pdf" target="_blank">Unsere Preisliste</a></li>	
-	 <li><a href="downloads/mvv.pdf" target="_blank">Regeln für die Nutzung von MVV-Zeitkarten</a></li>	 
+	 <!-- <li><a href="downloads/preisliste.pdf" target="_blank">Unsere Preisliste</a></li>	
+	 <li><a href="downloads/mvv.pdf" target="_blank">Regeln für die Nutzung von MVV-Zeitkarten</a></li>	  -->
 	</ul>
 
 	<p>
@@ -117,7 +155,7 @@ Markt Kirchseeoner Auto-Teiler e.V. (MKAT)<br>
 Talweg 11, 85614 Kirchseeon<br>
 Telefon: +49 80 91/5 56 96 56<br>
 http://www.mk-autoteiler.de<br>
-E-Mail: info@mk-autoteiler.de</p>
+E-Mail: <a href="mailto:info@mk-autoteiler.de">info@mk-autoteiler.de</a></p>
 <p>
 Der Verein ist registriert unter der Nummer VR205571 beim Amtsgericht München.<br>
 USt-IdNr. (UID): DEXXXXXXXXXXXX<br>
