--- a/mkat1/WebContent/faq.html
+++ b/mkat1/WebContent/faq.html
@@ -368,7 +368,7 @@
 <div id="N65621" class="faq-entry">
 <h2>Wann muss man die Fahrten bezahlen und wer rechnet das ab?</h2>
 <div class="faq-details">
-<p>Vor jeder Fahrt ist der aktuelle Kilometerstand zu pr&uuml;fen und nach jeder Fahrt der neue Stand in das Fahrtenbuch einzutragen. Das Fahrtenbuch wird viertelj&auml;hrlich vom Kassenwart des Vereins ausgewertet und abgerechnet. Sie erhalten eine Rechnung, die per &Uuml;berweisung zu begleichen ist. Das bequeme Lastschriftverfahren ist auch m&ouml;glich.</p>
+<p>Vor jeder Fahrt ist der aktuelle Kilometerstand zu pr&uuml;fen und nach jeder Fahrt der neue Stand in das Fahrtenbuch einzutragen. Das Fahrtenbuch wird viertelj&auml;hrlich vom Kassenwart des Vereins ausgewertet und abgerechnet. Sie erhalten eine Rechnung, die durch das bequeme Lastschriftverfahren beglichen wird.</p>
 </div>
 <a href="#top">Zur&uuml;ck</a>
 </div>
