--- a/mkat1/WebContent/index.html
+++ b/mkat1/WebContent/index.html
@@ -71,8 +71,8 @@
 
 	<h2>Wer sind wir?</h2>
 	<p>
-Wir sind der neue Verein, der Markt Kirchseeon mobile macht. Wir wollen postiv zum Umweltschutz beitragen. Unser Verein Markt Kirchseeoner Auto-Teiler e.V. wurde im Juli 2014 gegründet. Schon ein halbes Jahr später haben wir jetzt zwei Autos und durch die Quernutzung mit anderen Auto-Teiler-Vereinen eine riesige Fahrzegflotte verfügbar.
- Werden Sie Mitglied, statt sich selbst ein Auto anzuschaffen, welches dann die meiste Zeit ungenutzt herumsteht. Das spart Ihnen enorm Kosten, Sie brauchen sich nicht um die Wartung, Versicherung oder Steuer für das Auto kümmern. Buchen, Einsteigen und Losfahren.
+Wir sind der neue Verein, der Markt Kirchseeon mobil macht. Wir wollen postiv zum Umweltschutz beitragen. Unser Verein Markt Kirchseeoner Auto-Teiler e.V. wurde im Juli 2014 gegründet. Schon ein halbes Jahr später haben wir jetzt zwei Autos und durch die Quernutzung mit anderen Auto-Teiler-Vereinen steht uns eine riesige Fahrzegflotte zur Verfügung.
+ Werden Sie Mitglied, statt sich selbst ein Auto anzuschaffen, welches dann die meiste Zeit ungenutzt herumsteht. Das spart Ihnen Kosten, Sie brauchen sich nicht um die Wartung, Versicherung oder Steuer für das Auto kümmern. Buchen, Einsteigen und Losfahren.
 	</p>
 	<h2>Warum Autoteilen?</h2>
 	<p>
