--- a/mkat1/WebContent/index.html
+++ b/mkat1/WebContent/index.html
@@ -137,8 +137,8 @@ Autoteilen geht in Alltag mit Sicherheit leichter, als man es sich zuerst vorste
 	<li><a href="downloads/Beitrittserklaerung_MKAT_141103.pdf" target="_blank">Beitrittserklärung MKAT</a></li>
 	 <!-- <li><a href="downloads/satzung.pdf" target="_blank">Unsere Satzung</a></li> -->
 	 <li><a href="downloads/nutzungsordnung.pdf" target="_blank">Unsere Nutzungsordnung</a></li>	
-	 <!-- <li><a href="downloads/preisliste.pdf" target="_blank">Unsere Preisliste</a></li>	
-	 <li><a href="downloads/mvv.pdf" target="_blank">Regeln für die Nutzung von MVV-Zeitkarten</a></li>	  -->
+	 <li><a href="downloads/preisliste.pdf" target="_blank">Unsere Preisliste</a></li>	
+	 <!-- <li><a href="downloads/mvv.pdf" target="_blank">Regeln für die Nutzung von MVV-Zeitkarten</a></li>	  -->
 	</ul>
 
 	<p>
@@ -153,16 +153,17 @@ Autoteilen geht in Alltag mit Sicherheit leichter, als man es sich zuerst vorste
 	<p>
 Markt Kirchseeoner Auto-Teiler e.V. (MKAT)<br>
 Talweg 11, 85614 Kirchseeon<br>
-Telefon: +49 80 91/5 56 96 56<br>
+Telefon: +49 80 91/5 56 96 56-0<br>
+Telefax: +49 80 91/5 56 96 56-9<br>
 http://www.mk-autoteiler.de<br>
 E-Mail: <a href="mailto:info@mk-autoteiler.de">info@mk-autoteiler.de</a></p>
 <p>
 Der Verein ist registriert unter der Nummer VR205571 beim Amtsgericht München.<br>
 USt-IdNr. (UID): DEXXXXXXXXXXXX<br>
-Vorstand:	<a href="mailto:rmilde@mk-autoteiler.de">Rudolf Milde</a> (Telefon: +49 80 91/3137)<br>
+Vorstand:	<a href="mailto:rmilde@mk-autoteiler.de">Rudolf Milde</a><br>
 Vorstand:	<a href="mailto:rmeiler@mk-autoteiler.de">Reinhold Meiler</a><br>
 Vorstand:	<a href="mailto:sbauer@mk-autoteiler.de">Stefan Bauer</a><br>
-Webmaster:	<a href="mailto:eeeveee@mk-autoteiler.de">ivonne Reimann</a> (Telefon: +49 80 91/39 800 69)</p>
+Webmaster:	<a href="mailto:eeeveee@mk-autoteiler.de">ivonne Reimann</a></p>
 	 <p>
 Kontoverbindung:<br>	 
 Kontonummer:	27 8181 45<br>
