mvv und quernutzung

--- a/mkat1/WebContent/index.html
+++ b/mkat1/WebContent/index.html
@@ -138,7 +138,8 @@ Autoteilen geht in Alltag mit Sicherheit leichter, als man es sich zuerst vorste
 	 <!-- <li><a href="downloads/satzung.pdf" target="_blank">Unsere Satzung</a></li> -->
 	 <li><a href="downloads/nutzungsordnung.pdf" target="_blank">Unsere Nutzungsordnung</a></li>	
 	 <li><a href="downloads/preisliste.pdf" target="_blank">Unsere Preisliste</a></li>	
-	 <!-- <li><a href="downloads/mvv.pdf" target="_blank">Regeln für die Nutzung von MVV-Zeitkarten</a></li>	  -->
+	 <li><a href="downloads/mvv.pdf" target="_blank">Regeln für die Nutzung von MVV-Zeitkarten</a></li>
+	 <li><a href="downloads/quernutzung.pdf" target="_blank">Quernutzungsordnung mit unseren Partner-Vereinen</a></li>
 	</ul>
 
 	<p>
@@ -163,7 +164,7 @@ USt-IdNr. (UID): DEXXXXXXXXXXXX<br>
 Vorstand:	<a href="mailto:rmilde@mk-autoteiler.de">Rudolf Milde</a><br>
 Vorstand:	<a href="mailto:rmeiler@mk-autoteiler.de">Reinhold Meiler</a><br>
 Vorstand:	<a href="mailto:sbauer@mk-autoteiler.de">Stefan Bauer</a><br>
-Webmaster:	<a href="mailto:eeeveee@mk-autoteiler.de">ivonne Reimann</a></p>
+Design:	<a href="mailto:eeeveee@mk-autoteiler.de">ivonne Reimann</a></p>
 	 <p>
 Kontoverbindung:<br>	 
 Kontonummer:	27 8181 45<br>
