quernutzung wieder raus nehmen

--- a/mkat1/WebContent/index.html
+++ b/mkat1/WebContent/index.html
@@ -139,7 +139,7 @@ Autoteilen geht in Alltag mit Sicherheit leichter, als man es sich zuerst vorste
 	 <li><a href="downloads/nutzungsordnung.pdf" target="_blank">Unsere Nutzungsordnung</a></li>	
 	 <li><a href="downloads/preisliste.pdf" target="_blank">Unsere Preisliste</a></li>	
 	 <li><a href="downloads/mvv.pdf" target="_blank">Regeln für die Nutzung von MVV-Zeitkarten</a></li>
-	 <li><a href="downloads/quernutzung.pdf" target="_blank">Quernutzungsordnung mit unseren Partner-Vereinen</a></li>
+	 <!-- <li><a href="downloads/quernutzung.pdf" target="_blank">Quernutzungsordnung mit unseren Partner-Vereinen</a></li>  -->
 	</ul>
 
 	<p>
