--- a/mkat1/WebContent/index.html
+++ b/mkat1/WebContent/index.html
@@ -164,8 +164,7 @@ Autoteilen geht in Alltag mit Sicherheit leichter, als man es sich zuerst vorste
 	<p>
 Markt Kirchseeoner Auto-Teiler e.V. (MKAT)<br>
 Talweg 11, 85614 Kirchseeon<br>
-Telefon: +49 80 91/5 56 96 56-0<br>
-Telefax: +49 80 91/5 56 96 56-9<br>
+Telefon: +49 80 91/5 56 96 56<br>
 http://www.mk-autoteiler.de<br>
 E-Mail: <a href="mailto:info@mk-autoteiler.de">info@mk-autoteiler.de</a></p>
 <p>
