Change reservation link

--- a/mkat1/WebContent/index.html
+++ b/mkat1/WebContent/index.html
@@ -51,7 +51,7 @@
 					<ul>
 						<li id="wer" class="active"><a class="menu-entry" href="">Wer sind wir?</a></li>
 				        <li><a class="menu-entry" href="#member">Mitglied werden</a></li>
-				        <li><a target="_blank" href="https://buchung.elkato.de/mkat">Zur Buchung</a></li>
+				        <li><a target="_blank" href="https://www.elkato.de/buchung/mkat">Zur Buchung</a></li>
 				        <li><a class="menu-entry" href="#downloads">Downloads</a></li>
 				        <li><a class="menu-entry" href="faq.html">FAQ</a></li>
 				        <li><a class="menu-entry" href="#impress">Impressum</a></li>				        
