--- a/mkat1/WebContent/index.html
+++ b/mkat1/WebContent/index.html
@@ -44,13 +44,19 @@
 				        <li><a target="_blank" href="https://www.elkato.de/buchung/mkat">Zur Buchung</a></li>
 				        <li><a class="menu-entry" href="#downloads">Downloads</a></li>
 				        <li><a class="menu-entry" href="faq.html">FAQ</a></li>
-				        <li><a class="menu-entry" href="#impress">Impressum</a></li>				        
+				        <li class="dropdown">
+				        	 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Rechtliches <span class="caret"></span></a>
+				        	 <ul class="dropdown-menu">
+				        		<li><a class="menu-entry" href="legal.html#impress" target="_blank">Impressum</a></li>
+				        		<li><a class="menu-entry" href="legal.html#disclaimer" target="_blank">Disclaimer</a></li>
+				        		<li><a class="menu-entry" href="legal.html#privacy" target="_blank">Datenschutzerklärung</a></li>
+				        	</ul>
+				        </li>				        
 					</ul>
 				</div>
 			</div>
 		</div>
 	</nav>
-	
 	
 	<div id="main" class="container-fluid">
 	
